Fixing issues with alignment and color coding

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -21,7 +21,7 @@
 .profile-header-img > img.img-circle {
     width: 180px;
     height: 180px;
-    border: 2px solid rgba(209, 19, 16, 0.81);
+    border: 6px solid rgba(246, 104, 47, 1);
     align-content: center;
 }
 
